# CedXStore

./: .gitignore  CMakeLists.txt  conanfile.txt  install.sh
src/: Config.h  Config.h.in  main.cpp
src/Database/: CMakeLists.txt  Database.cpp  Database.hpp  IDatabase.hpp  MySqlDb.cpp  MySqlDb.hpp  test.cpp
src/Database/formerLib/: MySqlDb.cpp  MySqlDb.hpp
src/Launcher/: CMakeLists.txt  main.cpp
src/Launcher/App/: App.cpp  App.hpp
src/Launcher/Client/: CMakeLists.txt  Client.hpp  main.cpp
src/Launcher/Client/App/: App.cpp  App.hpp
src/Launcher/Client/Client/: Client.cpp  Client.hpp
src/Launcher/Client/Login/: Login.cpp  Login.hpp
src/Launcher/Client/Login/ClickableLabel/: ClickableLabel.cpp  ClickableLabel.hpp
src/Launcher/Client/Manager/: Manager.cpp  Manager.hpp
src/Launcher/Client/Settings/: Settings.hpp  wxTranslator.hpp
src/Launcher/Client/Window/: myButton.cpp  myButton.hpp  myUtils.hpp  myWindow.cpp
src/Launcher/Client/Window/FriendFrame/: FriendFrame.hpp
src/Launcher/Client/Window/Loading/: Loading.cpp  Loading.hpp
src/Launcher/Client/Window/Login/: Login.cpp  Login.hpp
src/Launcher/Client/Window/Login/Label/: Label.cpp  Label.hpp
src/Launcher/Client/Window/Login/Password/: Password.cpp  Password.hpp
src/Launcher/Client/Window/Login/Pseudo/: Pseudo.cpp  Pseudo.hpp
src/Launcher/Client/Window/SideMenu/: SideMenu.cpp  SideMenu.hpp
src/Launcher/Client/myTimer/: myTimer.cpp  myTimer.hpp
src/Launcher/Manager/: Manager.cpp  Manager.hpp
src/Launcher/Server/: CMakeLists.txt  main.cpp
src/Launcher/Server/Account/: AccountManager.hpp
src/Launcher/Server/Core/: Core.cpp  Core.hpp
src/Launcher/Settings/: Settings.hpp
src/Launcher/Window/: myButton.cpp  myWindow.cpp  myWindow.hpp  utils.hpp
src/Launcher/Window/SideMenu/: SideMenu.hpp
src/Module/: IModule.hpp
src/TCP/: ErrorCode.hpp
src/TCP/client/: Client.hpp
src/TCP/server/: CMakeLists.txt  ErrorCode.hpp  Server.cpp  Server.hpp
src/TCP/server/Connection/: Connection.cpp  Connection.hpp
src/TCP/server/Connection/Module/: IModule.hpp
src/TCP/server/Database/: IDatabase.hpp
src/TCP/server/RoomHandler/: RoomHandler.cpp  RoomHandler.hpp
src/ThreadPool/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.hpp  ThreadSafeQueue.hpp
src/myTimer/: CMakeLists.txt
